# skill-doppler-manager

./: .gitignore  .markdownlint.yaml  AUDIT_REVIEW.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  PROJECT_REVIEW.md  README.md  SECURITY.md  SKILL.md  SOTA_REVIEW.md  codespace_init.sh  doppler-audit-export.jsonl  package-lock.json  package.json  prompts-pool.md  spec.md
.claude/: scheduled_tasks.json
.devcontainer/: devcontainer.json
.github/milestones/: roadmap.json
.github/workflows/: ci.yml  releases.yml
.omc/: project-memory.json
.omc/autopilot/: spec.md
.omc/plans/: autopilot-impl.md
.omc/state/: autopilot-state.json  last-tool-error.json  (+3 more)
references/: MCP_SERVER.md  SOP.md  architecture_decisions.md  maintenance.md  manager_reference.md  security_assessment.md
scripts/: access_request.sh  audit_secrets.sh  check_status.sh  detect_manager.sh  emergency_seal.sh  error_codes.sh  prep_eval.sh  rate_limit.sh  secret_lease.sh  secret_manager_interface.sh  secret_rotation.sh  tracing.sh  verify_environment.sh
scripts/mcp_server/: README.md  __init__.py  pyproject.toml  server.py
scripts/mcp_server/notifications/: lease_monitor.py
scripts/mcp_server/resources/: __init__.py  secrets.py
scripts/mcp_server/tools/: audit.py  fetch.py  lease.py  request.py  rotation.py  run.py  status.py
scripts/mcp_server/utils/: json_mask.py  leak_detection.py
tests/: audit_secrets.bats  check_status.bats  emergency_seal.bats  eval_prompt.txt  final_eval_prompt.txt  promptfooconfig.yaml  promptfooconfig_adversarial.yaml  run_tests.sh  verify_environment.bats
(+31 files in other folders)
